--- a/src/styles/_placeholders.scss
+++ b/src/styles/_placeholders.scss
@@ -1,5 +1,5 @@
 %header-title-style {
-  color: $header-text-volor;
+  color: $header-text-color;
   font-weight: 700;
   font-size: 4.5rem;
   line-height: 72px;
