--- a/src/styles/follow.scss
+++ b/src/styles/follow.scss
@@ -13,7 +13,7 @@
   }
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: $margin-small;
 
     font-family: "Montserrat", sans-serif;
     font-size: 48px;
@@ -21,7 +21,7 @@
   }
 
   &__desctiption {
-    font-weight: 400;
+    font-weight: $fw-medium;
     font-size: 18px;
     line-height: 18px;
   }
@@ -35,7 +35,7 @@
     border: 0;
 
     font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+    font-weight: $fw-medium;
     font-size: 14px;
     line-height: 14px;
     transition: 0.2s ease-in-out;
