--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,6 +8,7 @@
   &__section {
     display: grid;
     grid-template-columns: 675px 3fr;
+    margin: 0 auto;
 
   }
 
@@ -33,15 +34,21 @@
     top: 60%;
     right: 5%;
     text-decoration: none;
+
+    
   }
 
   &__button-text {
     padding: 27px 43px;
     font-weight: 500;
     line-height: 16px;
-    color: $header-text-volor;
+    color: $header-text-color;
 
     border: 1px solid #1a5a4c;
+
+    &:hover {
+      box-shadow: 0 6px 23px rgba(218, 213, 209, 0.8);
+    }
   }
 
   &__button-span {
@@ -51,13 +58,17 @@
 
     border: 1px solid #1a5a4c;
     background-color: #1a5a4c;
+
+    &:hover {
+      box-shadow: 0 6px 23px rgba(218, 213, 209, 0.8);
+    }
   }
 
   &__event {
     position: absolute;
 
     color: #687480;
-    font-weight: 700;
+    font-weight: $fw-bold;
     font-size: 0.9rem;
     line-height: 14px;
     left: 10%;
@@ -97,7 +108,7 @@
     font-size: 2.1rem;
     line-height: 36px;
     font-weight: bold;
-    color: #0f0e08;
+    color: $header-text-color;
   }
 }
 
@@ -112,7 +123,7 @@
 
     &__main {
       display: grid;
-      margin: 20px auto 38px;
+      margin: $margin-small auto 38px;
       justify-content: center;
 
       order: 1;
@@ -145,12 +156,12 @@
     }
     
     &__logo {
-      left: 50%;
+      left: 45vw;
     }
     
     &__img {
       height: 320px;
-      object-position: center;
+      object-position: left;
     }
 
     &__button {
