--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -32,7 +32,7 @@
       grid-template-areas: "icons icons"
         "schedule contacts";
 
-      margin: 0 20px;
+      margin: 0 $margin-small;
     }
 
     &__right {
