--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -39,7 +39,7 @@
   }
 
   &__date {
-    font-weight: 700;
+    font-weight: $fw-bold;
     font-size: 0.9rem;
     line-height: 21px;
     color: #1a5a4c;
@@ -49,9 +49,9 @@
     font-family: "Montserrat", sans-serif;
     font-size: 2.1rem;
     line-height: 36px;
-    font-weight: 400;
+    font-weight: $fw-medium;
 
-    color: #0f0e08;
+    color: $header-text-color;
   }
 }
 
@@ -78,13 +78,13 @@
     &__date {
       font-size: 16px;
       line-height: 16px;
-      font-weight: 700;
+      font-weight: $fw-bold;
     }
 
     &__title {
       font-size: 28px;
       line-height: 28px;
-      font-weight: 400;
+      font-weight: $fw-medium;
     }
   }
 }
