--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -87,7 +87,9 @@
 }
 
 @media (max-width: 600px) {
-  &__gallery {
-    margin: 0 20px 139px;
+  .main {
+    &__gallery {
+      margin: 0 20px 139px;
+    }
   }
 }
