--- a/src/styles/schedule.scss
+++ b/src/styles/schedule.scss
@@ -1,7 +1,7 @@
 .schedule {
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: $margin-small;
   }
 
   &__span {
@@ -9,7 +9,7 @@
   }
 
   &__list {
-    margin-bottom: 20px;
+    margin-bottom: $margin-small;
   }
 }
 
