--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: center;
     max-width: 370px;
-    margin: 0 20px;
+    margin: 0 $margin-small;
   }
 
   &__caption {
@@ -31,7 +31,7 @@
   }
 
   &__date {
-    font-weight: 700;
+    font-weight: $fw-bold;
     font-size: 0.9rem;
     line-height: 21px;
     color: #1a5a4c;
@@ -42,10 +42,10 @@
     margin-bottom: 15px;
 
     font-family: "Montserrat", sans-serif;
-    font-weight: 400;
+    font-weight: $fw-medium;
     font-size: 2.1rem;
     line-height: 36px;
-    color: #0f0e08;
+    color: $header-text-color;
 
     &::after {
       position: absolute;
@@ -94,7 +94,12 @@
 
     &__img {
       height: 210px;
-      margin: 0 20px;
+      margin: 0 $margin-small;
+    }
+
+    &__caption {
+      margin-top: $margin-small;
+      
     }
   }
 }
