--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
+@import "reset";
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "header";
+@import "events";
+@import "description";
+@import "gallery";
+@import "subscription";
+@import "form";
+@import "footer";
+@import "links";
+@import "shedule";
+@import "contacts";
+@import "nav";
 
-body {
-  background: $c-gray;
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "IBM Plex Sans", "Montserrat", "Ubuntu", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
