--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,27 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%type-name {
+  color: $subtitle-color;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+%type-time {
+  color: $text-color;
+  font-weight: $fw-bold;
+}
+
+%subtitle {
+  font-family: $ff-monts;
+  font-size: 36px;
+}
+
+%title {
+  font-size: 48px;
+  font-weight: $fw-bold;
+  font-family: $ff-monts;
+}
+
+%logo {
+  font-weight: $fw-bold;
+  font-size: 36px;
+  font-family: $ff-monts;
 }
