--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$text-color: #1a5a4c;
+$subtitle-color: #687480;
+
+$fw-bold: 700;
+
+$ff-ibm: "IBM Plex Sans", sans-serif;
+$ff-monts: "Montserrat", sans-serif;
