--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -11,13 +11,13 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: $tablet-width-s) {
   .contacts {
     width: 130px;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: $phone-width-m) {
   .contacts {
     width: 128px;
   }
