--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -49,13 +49,13 @@
   }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: $desktop-width-m) {
   .footer__menu {
     margin-right: 150px;
   }
 }
 
-@media (max-width: 1500px) {
+@media (max-width: $desktop-width-m) {
   .footer {
     &::after {
       left: 58%;
@@ -63,7 +63,7 @@
   }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: $desktop-width-s) {
   .footer {
     &::after {
       left: 58%;
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: $notebook-width-l) {
   .footer {
     &::after {
       left: 58%;
@@ -79,7 +79,7 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $notebook-width-m) {
   .footer {
 
     &::after {
@@ -109,7 +109,7 @@
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: $notebook-width-s) {
   .footer {
 
     &::after {
@@ -118,7 +118,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: $tablet-width-l) {
   .footer {
 
     &::after {
@@ -127,7 +127,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: $tablet-width-m) {
   .footer {
 
     &::after {
@@ -136,7 +136,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: $tablet-width-s) {
   .footer {
     padding: 50px 20px;
 
@@ -191,7 +191,7 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: $phone-width-m) {
   .footer {
     
     &::after {
@@ -202,7 +202,7 @@
   }
 }
 
-@media (max-width: 330px) {
+@media (max-width: $phone-width-s) {
   .footer {
     &::after {
       top: 48%;
