--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -92,7 +92,7 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $notebook-width-m) {
   .header {
     grid-template-columns: 300px 1fr;
 
@@ -116,7 +116,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $phone-width-l) {
   .header {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
