--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -27,13 +27,13 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $notebook-width-m) {
   .subscription {
     height: 380px;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: $tablet-width-s) {
   .subscription__title {
     font-size: 36px;
   }
