--- a/src/styles/description.scss
+++ b/src/styles/description.scss
@@ -41,31 +41,31 @@
   }
 }
 
-@media (min-width: 1900px) {
+@media (min-width: $desktop-width-l) {
   .description__info {
     margin-bottom: -100px;
   }
 }
 
-@media (min-width: 1700px) {
+@media (min-width: $desktop-width-small-l) {
   .description__info {
     margin-bottom: -80px;
   }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: $desktop-width-m) {
   .description__info {
     margin-bottom: -60px;
   }
 }
 
-@media (min-width: 1350px) {
+@media (min-width: $desktop-width-medium-s) {
   .description__info {
     margin-bottom: -140px;
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $notebook-width-m) {
   .description {
     background-size: 90% 50%;
     background-position: center center;
@@ -76,7 +76,7 @@
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: $tablet-width-medium-m) {
   .description {
     background-size: contain;
     
@@ -102,7 +102,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $phone-width-l) {
   .description {
     background-size: 100% 50%;
     align-items: center;
