--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -85,7 +85,7 @@
   }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: $desktop-width-m) {
   .events {
   
     &__info {
@@ -111,7 +111,7 @@
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: $desktop-width-small-m) {
   .events {
     padding: 200px 55px 100px;
 
@@ -121,7 +121,7 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: $notebook-width-m) {
   .events {
     grid-template-areas: "title"
       "img"
@@ -146,7 +146,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $phone-width-l) {
   .events {
     padding: 0 10px;
 
