--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -40,14 +40,14 @@
   }
 }
 
-@media (min-width: 1900px) {
+@media (min-width: $desktop-width-l) {
   .gallery {
     padding: 200px 175px 0;
     max-width: 1900px;
   }
 }
 
-@media (max-width: 1900px) {
+@media (max-width: $desktop-width-l) {
   .gallery {
     padding: 200px 10px 0;
     
@@ -66,7 +66,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: $notebook-width-l) {
   .gallery {
     padding: 0 0 0 10px;
 
@@ -104,7 +104,7 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: $tablet-width-small-m) {
   .gallery {
 
     &__title {
