--- a/src/styles/links.scss
+++ b/src/styles/links.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: $tablet-width-s) {
   .links {
     display: flex;
     flex-direction: row;
