first commit - mobile version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../../node_modules/reset-css/sass/reset";
+@import "normolize";
 
-body {
-  background: $c-gray;
-}
+@import "utils";
+
+@import "./header/header";
+@import "./main/art-museum.scss";
+@import "./main/current-events";
+@import "./main/subscribe";
