--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "variables";
+@import "header";
+@import "menu";
+@import "namu";
+@import "title";
+@import "tickets";
+@import "button";
+@import "events";
+@import "section";
+@import "actual";
+@import "heading";
+@import "exhibition";
+@import "lecture";
+@import "gallery";
+@import "photos";
+@import "dots";
