--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -202,9 +202,13 @@
     
     &::after {
       left: 46%;
-      top: 43%;
+      top: 50%;
       
       height: 280px;
+    }
+
+    &__menu {
+      margin-left: 60px;
     }
   }
 }
@@ -214,6 +218,10 @@
     &::after {
       top: 48%;
       left: 48%;
+    }
+
+    &__menu {
+      margin: 0;
     }
   }
 }
