--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -94,12 +94,28 @@
 
     &__img {
       height: 210px;
-      margin: 0 $margin-small;
+      margin: 0;
+      width: 100%;
+    }
+
+    &__title {
+
+      font-size: 1.5rem;
+
+      &::after {
+        position: absolute;
+        bottom: 30%;
+        left: 80%;
+      }
+    }
+
+    &__card {
+      margin: 0;
     }
 
     &__caption {
       margin-top: $margin-small;
-      
+      justify-content: space-between;
     }
   }
 }
