--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
+@import "../../node_modules/reset-css/sass/reset";
+
 @import "utils";
-@import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "./header";
+@import "./burger";
+
+html {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
 }
