--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,5 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap");
