media min-width:768px

--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -1,44 +1,55 @@
+@import "./logo";
 // Iphone SE
-@media screen and (min-width: 280px) {
-  .header {
-    position: relative;
-    height: 300px;
-    background: no-repeat url("/images/header.jpg");
-    background-size: cover;
-    background-position: center;
+.header {
+  position: relative;
+  height: 300px;
+  // background: no-repeat url("/images/header.jpg");
+  // background-size: cover;
+  // background-position: center;
 
-    &__logo {
-      position: absolute;
-      top: 9px;
-      left: calc(50% - #{$logo-width} / 2);
+  &__img {
+    float: right;
+    object-fit: fill;
+    object-position: center;
+  }
 
-      font-size: 30px;
-      font-weight: 700;
-      text-transform: uppercase;
-    }
+  &__logo {
+    position: absolute;
+    top: 9px;
+    left: calc(50% - #{$logo-width} / 2);
+  }
 
-    &__toggler {
-      opacity: 0;
-    }
+  &__toggler {
+    opacity: 0;
+  }
 
-    &__toggler-label {
-      position: absolute;
-      top: 33px;
-      left: 23px;
+  &__toggler-label {
+    position: absolute;
+    top: 33px;
+    left: 23px;
 
-      & > span,
-      &::before,
-      &::after {
-        display: block;
-        width: 18px;
-        height: 2px;
-        content: "";
-        margin-bottom: 3px;
+    & > span,
+    &::before,
+    &::after {
+      display: block;
+      width: 18px;
+      height: 2px;
+      content: "";
+      margin-bottom: 3px;
 
-        background-color: #000;
-      }
+      background-color: #000;
     }
   }
 }
 
 //IPad Mini/9.7
+@media screen and (min-width: 768px) {
+  .header {
+    height: 385px;
+
+    &__img {
+      width: 505px;
+      height: 100%;
+    }
+  }
+}
