--- a/src/styles/main/current-events.scss
+++ b/src/styles/main/current-events.scss
@@ -1,22 +1,25 @@
 @import "./article";
 
 // Iphone SE
-@media screen and (min-width: 280px) {
+.current-events {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  &__heading {
+    margin-bottom: 40px;
+
+    font-size: 36px;
+    font-weight: 700;
+    color: #0f0e08;
+  }
+}
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
   .current-events {
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
-    &__heading {
-      max-width: 280px;
-      margin-bottom: 40px;
-
-      font-size: 36px;
-      font-weight: 700;
-      color: #0f0e08;
-    }
+    padding-top: 90px;
+    text-align: start;
   }
 }
