--- a/src/styles/main/exhibition.scss
+++ b/src/styles/main/exhibition.scss
@@ -11,3 +11,14 @@
     color: #1a5a4c;
   }
 }
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
+  .exhibition {
+    justify-content: start;
+
+    &__title {
+      margin-right: 25px;
+    }
+  }
+}
