--- a/src/styles/main/subscribe.scss
+++ b/src/styles/main/subscribe.scss
@@ -3,6 +3,7 @@
 .subscribe {
   padding: 55px 20px 113px;
   text-align: center;
+
   color: $c-white;
   background: no-repeat url("/images/subscribe.jpg");
   background-size: cover;
@@ -20,5 +21,12 @@
     font-size: 18px;
     font-weight: 300;
     line-height: 27px;
+  }
+}
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
+  .subscribe {
+    height: 380px;
   }
 }
