--- a/src/styles/main/art-museum.scss
+++ b/src/styles/main/art-museum.scss
@@ -1,50 +1,73 @@
 // Iphone SE
-@media screen and (min-width: 280px) {
+.art-museum {
+  padding: 20px 0 70px;
+  text-align: center;
+
+  &__title {
+    margin-bottom: 20px;
+
+    font-size: 45px;
+    font-weight: 700;
+  }
+
+  &__btn {
+    position: relative;
+    min-width: 280px;
+    height: 50px;
+    padding-right: 50px;
+
+    font-size: 16px;
+    cursor: pointer;
+
+    background-color: $c-white;
+    border: 1px solid $c-green;
+
+    [data-icon] {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      width: 50px;
+      height: 48px;
+      background-color: $c-green;
+
+      &::before {
+        position: absolute;
+        top: 50%;
+        bottom: 50%;
+        transform: translate(-50%, -50%);
+        width: 8px;
+        height: 12px;
+        content: "";
+
+        background: no-repeat url("/images/vector-1.svg");
+        background-position: center;
+        background-size: cover;
+      }
+    }
+  }
+}
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
   .art-museum {
-    padding: 20px 0 70px;
-    text-align: center;
+    position: absolute;
+    top: 135px;
+    left: 34px;
+    text-align: start;
 
     &__title {
-      margin-bottom: 20px;
-
-      font-size: 45px;
-      font-weight: 700;
+      width: 360px;
+      font-size: 55px;
     }
 
     &__btn {
-      position: relative;
-      min-width: 280px;
-      height: 50px;
-      padding-right: 50px;
-
-      font-size: 16px;
-      cursor: pointer;
-
-      background-color: $c-white;
-      border: 1px solid $c-green;
+      min-width: 220px;
+      height: 70px;
 
       [data-icon] {
-        position: absolute;
-        top: 0;
-        right: 0;
-
-        width: 50px;
-        height: 48px;
-        background-color: $c-green;
-
-        &::before {
-          position: absolute;
-          top: 50%;
-          bottom: 50%;
-          transform: translate(-50%, -50%);
-          width: 8px;
-          height: 12px;
-          content: "";
-
-          background: no-repeat url("/images/vector-1.svg");
-          background-position: center;
-          background-size: cover;
-        }
+        width: 70px;
+        height: 70px;
       }
     }
   }
