--- a/src/styles/main/article.scss
+++ b/src/styles/main/article.scss
@@ -1,13 +1,12 @@
 @import "./exhibition.scss";
 
 .article {
-  // max-width: 280px;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
 
   &__img {
     width: 100%;
-    height: 210px;
+    min-height: 210px;
     margin-bottom: 15px;
 
     object-fit: cover;
@@ -46,5 +45,29 @@
     font-weight: 300;
     line-height: 24px;
     color: $c-gray;
+  }
+}
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
+  .article {
+    text-align: center;
+    &__img {
+      margin-bottom: 30px;
+      max-width: 700px;
+      height: 520px;
+    }
+
+    &__exhibition {
+      margin-bottom: 30px;
+    }
+
+    &__heading {
+      margin-bottom: 15px;
+    }
+
+    &__text {
+      margin-bottom: 50px;
+    }
   }
 }
