--- a/src/styles/main/form.scss
+++ b/src/styles/main/form.scss
@@ -31,3 +31,19 @@
     background-color: #f14a27;
   }
 }
+
+//IPad Mini/9.7
+@media screen and (min-width: 768px) {
+  .form {
+    &__input {
+      width: 395px;
+      height: 70px;
+      margin-right: 10px;
+    }
+
+    &__button {
+      width: 70px;
+      height: 70px;
+    }
+  }
+}
