--- a/src/styles/_dots.scss
+++ b/src/styles/_dots.scss
@@ -1,12 +1,25 @@
 .dots {
   display: flex;
   gap: 22px;
-  width: 200px;
+  width: calc(100vw - 34px - 42px);
+  justify-content: center;
 
   &__item {
     background-color: #e0e0e0;
     width: 9px;
     height: 9px;
     border-radius: 50%;
+
+    &--active {
+      background-color: #1a5a4c;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    width: calc(100vw - 20px - 42px);
+  }
+
+  @media screen and (min-width: 769px) {
+    display: none;
   }
 }
