--- a/src/styles/_exhibition.scss
+++ b/src/styles/_exhibition.scss
@@ -20,10 +20,12 @@
   @media screen and (max-width: 768px) {
     padding-top: 66px;
     padding-left: 34px;
+    padding-right: 34px;
   }
 
   @media screen and (max-width: 320px) {
     padding-left: 20px;
+    padding-right: 20px;
   }
 
   &__block {
@@ -63,6 +65,10 @@
       grid-template-columns: minmax(360px);
       margin-bottom: 90px;
     }
+
+    @media screen and (max-width: 320px) {
+      margin-bottom: 40px;
+    }
   }
 
   &__img {
@@ -101,7 +107,7 @@
 
     @media screen and (max-width: 768px) {
       position: relative;
-      bottom: 280px;
+      bottom: 260px;
     }
 
     @media screen and (max-width: 768px) {
@@ -111,7 +117,7 @@
     @media screen and (max-width: 320px) {
       width: 280px;
       height: 210px;
-      bottom: 330px; /*&&&&&&&&&&&&&*/
+      bottom: 270px;
     }
   }
 
@@ -129,13 +135,13 @@
     @media screen and (max-width: 768px) {
       width: 360px;
       position: relative;
-      top: 530px;
+      top: 520px;
     }
 
     @media screen and (max-width: 320px) {
       width: 280px;
       position: relative;
-      top: 230px;
+      top: 215px;
     }
   }
 
@@ -150,6 +156,11 @@
 
     @media screen and (max-width: 768px) {
       padding-top: 0;
+      padding-bottom: 15px;
+    }
+
+    @media screen and (max-width: 320px) {
+      padding-bottom: 15px;
     }
   }
 
@@ -186,6 +197,7 @@
   &__title {
     display: inline-block;
     padding-top: 10px;
+
     font-family: $secondary-font;
     font-weight: 400;
     font-size: 36px;
@@ -194,6 +206,7 @@
 
     @media screen and (max-width: 320px) {
       font-size: 28px;
+      line-height: 28px;
     }
 
     &::after {
@@ -207,17 +220,23 @@
       height: 15px;
 
       @media screen and (max-width: 320px) {
-        top: 22px;
+        top: 19px;
         left: calc(100% + 12px);
       }
     }
   }
 
   &__text {
+    padding-top: 15px;
+
     font-weight: 300;
     font-size: 16px;
     line-height: 24px;
     color: #4e4e4e;
+
+    @media screen and (max-width: 320px) {
+      padding-top: 11px;
+    }
   }
 
 }
