--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -15,10 +15,21 @@
   }
 
   @media screen and (max-width: 768px) {
+    padding-top: 200px;
     padding-left: 34px;
   }
 
   @media screen and (max-width: 320px) {
+    padding-top: 80px;
     padding-left: 20px;
+
+    display: grid;
+  }
+
+  &__heading {
+    @media screen and (max-width: 320px) {
+      text-align: start;
+      padding-left: 50px;
+    }
   }
 }
