--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  width: 100vw;
   padding-left: 136px;
 
   display: grid;
@@ -40,7 +40,7 @@
     }
   }
 
-  &__tickets {
+  &__tickets--button {
     grid-column-start: 3;
 
     display: flex;
@@ -81,5 +81,9 @@
     grid-template-areas: "image image"
       "title title"
       "tickets tickets";
+  }
+
+  &__button {
+    background-color: #1a5a4c;
   }
 }
