--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -25,7 +25,7 @@
   }
 
   &__main {
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     width: 570px;
     height: 204px;
     padding-top: 45px;
@@ -59,7 +59,7 @@
       padding-bottom: 34px;
 
       top: calc(210px - 204px / 2);
-      left: calc(50% - 278px / 2);
+      left: 12px;
     }
   }
 
@@ -90,7 +90,8 @@
   }
 
   &__title {
-    margin: 0;
+    /*margin: 0;*/
+    padding-top: 16px;
 
     font-family: $secondary-font;
     font-size: 36px;
@@ -99,6 +100,8 @@
     color: #0f0e08;
 
     @media screen and (max-width: 320px) {
+      padding-top: 15px;
+
       font-size: 28px;
       line-height: 28px;
     }
