--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -10,7 +10,17 @@
     margin-bottom: $grid-gap;
 
     @media screen and (max-width: 768px) {
-      margin-bottom: 0;
+      height: 543px;
+      margin-bottom: 30px;
+
+      overflow: auto;
+    }
+
+    @media screen and (max-width: 320px) {
+      height: 410px;
+      margin-bottom: 30px;
+
+      overflow: auto;
     }
   }
 
@@ -53,16 +63,24 @@
 
     &--3,
     &--6 {
-      @media screen and (max-width: 1440px) {
+      @media screen and (min-width: 769px) and (max-width: 1440px) {
         display: none;
       }
     }
 
     @media screen and (max-width: 768px) {
       height: 543px;
+      object-fit: contain;
       /*margin-bottom: 0;*/
     }
 
+    @media screen and (max-width: 320px) {
+      width: 280px;
+      height: 410px;
+    }
   }
 
+  @media screen and (max-width: 768px) {
+    width: 100vw;
+  }
 }
