--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 ul,
@@ -10,7 +14,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
   padding: 0;
   font-family: "IBM Plex Sans", sans-serif;
