--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,10 +1,8 @@
 .button {
-  box-sizing: border-box;
+  /* box-sizing: border-box;*/
 
   width: 70px;
   height: 70px;
-
-  background-color: #1a5a4c;
 
   @media screen and (max-width: 320px) {
     width: 50px;
