--- a/src/styles/_heading.scss
+++ b/src/styles/_heading.scss
@@ -13,12 +13,14 @@
   }
 
   @media screen and (max-width: 320px) {
+    padding-top: 50px;
+    padding-bottom: 40px;
+    width: 100%;
+
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
-    text-align: center;
     white-space: unset;
-    padding-top: 70px;
-    padding-bottom: 40px;
+    text-align: center;
   }
 }
