--- a/src/styles/_tickets.scss
+++ b/src/styles/_tickets.scss
@@ -1,21 +1,24 @@
 .tickets {
-  width: 150px;
-  padding: 26px 43px;
-  box-sizing: border-box;
 
-  display: flex;
-  justify-content: center;
+  &__text {
+    width: 150px;
+    padding: 26px 43px;
 
-  border: 1px solid #1a5a4c;
-  text-transform: uppercase;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 16px;
-  color: #0f0e08;
-
-  @media screen and (max-width: 320px) {
-    width: 230px;
-    height: 50px;
-    padding: 15px 80px;
+    display: flex;
+    justify-content: center;
+  
+    border: 1px solid #1a5a4c;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    color: #0f0e08;
+  
+    @media screen and (max-width: 320px) {
+      width: 230px;
+      height: 50px;
+      padding: 15px 80px;
+    }
   }
+
 }
