--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -12,7 +12,7 @@
     font-size: 14px;
     font-weight: 700;
 
-    color: #687480;
+    color: $color-grey;
     transform: rotate(-90deg);
 
     &::before {
@@ -22,7 +22,7 @@
       right: 100px;
       width: 1px;
       height: 70px;
-      background-color: #687480;
+      background-color: $color-grey;
       transform: rotate(-90deg);
     }
   }
@@ -37,6 +37,7 @@
     font-family: $title-font;
     text-transform: uppercase;
     font-size: 72px;
+    font-weight: 700;
   }
 
   &__span {
@@ -54,7 +55,7 @@
 
     color: #000;
 
-    border: 1px solid #1a5a4c;
+    border: 1px solid $color-green;
   }
 
   &__text {
@@ -64,7 +65,7 @@
   &__arrow {
     padding: 30px;
     color: #d7dde3;
-    background-color: #1a5a4c;
+    background-color: $color-green;
   }
 
   &__photo {
@@ -94,8 +95,9 @@
     top: 35%;
 
     font-family: $title-font;
-    text-transform: uppercase;
     font-size: 72px;
+    font-weight: 700;
+    text-transform: uppercase;
 
     color: transparent;
     -webkit-text-stroke: 1px black;
