--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,11 @@
 
 @import "./header";
 @import "./burger";
+@import "./section";
+@import "./event";
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
+  
 }
