--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,16 @@
 @import "__reset";
 @import "header";
 @import "button";
+@import "card";
+@import "image";
+@import "title";
+
+html {
+  font-family: Montserrat, sans-serif;
+}
 
 body {
   background: $c-gray;
+  margin: 0;
+  padding: 0;
 }
