--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -46,7 +46,7 @@
 
   &__link,
   &__link:visited {
-    padding: 27px 0 27px 43px;
+    padding: 29px 0 29px 43px;
     
     
     font-weight: 500;
@@ -83,7 +83,7 @@
     position: absolute;
     left: 15%;
     top: 15px;
-
+    font-weight: 700;
     font-family: $title-font;
     font-size: 36px;
     text-transform: uppercase;
@@ -155,6 +155,8 @@
     &__logo {
       left: 50%;
       transform: translateX(-50%);
+
+      font-weight: 700;
     }
 
     &__transparent {
