--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -1,35 +1,13 @@
-.events {
-
-  &__item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 100px;
-
-    &:nth-child(even) {
-      flex-direction: row-reverse;
-    }
-  }
-
-  &__info {
-    margin-left: 130px;
-
-    &:nth-child(even) {
-      margin-right: 130px;
-    }
-  }
-
-  &__img {
-    width: 100%;
-    height: 520px;
-    object-fit: cover;
-  }
+.info {
 
   &__small-info {
     display: flex;
     justify-content: space-between;
-    width: 225px;
     margin-bottom: 30px;
+
+    &_width {
+      width: 225px;
+    }
   }
 
   &__name {
@@ -54,7 +32,7 @@
     font-family: $title-font;
     font-size: 36px;
 
-    &::after {
+    &_square::after {
       position: absolute;
       top: 50%;
       left: calc(100% + 20px);
@@ -77,47 +55,13 @@
   }
 }
 
-@media screen and (max-width: 1279px) {
-  .events {
-
-    &__item:nth-child(n) {
-      flex-direction: column;
-      align-items: stretch;
-    }
-
-    &__photo {
-      margin-bottom: 35px;
-    }
-
-    &__info {
-      margin: 0;
-    }
-  }
-}
-
 @media screen and (max-width: 425px) {
-  .events {
-
-    &__item {
-      margin-bottom: 60px;
-    }
-
-    &__photo {
-      margin-bottom: 19px;
-    }
-
-    &__img {
-      height: 210px;
-    }
-
-    &__info {
-      width: 100%;
-    }
+  .info {
 
     &__title {
       font-size: 28px;
 
-      &::after {
+      &_square::after {
         left: calc(100% + 10px);
       }
     }
