--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,15 @@
 
 @import "utils";
 @import "typography";
+@import "info";
 
 @import "./header";
 @import "./burger";
 @import "./section";
 @import "./event";
+@import "./lecture";
+@import "./gallery";
+@import "./subscriptiop";
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
