--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,11 +1,7 @@
 .section {
-  max-width: calc(1500px);
-  margin: 0 auto;
-  padding: 0 55px;
 
   &__heading {
-    margin-top: 200px;
-    margin-bottom: 60px;
+    margin: 200px 0 60px 55px;
 
     font-family: $title-font;
     font-size: 48px;
@@ -15,20 +11,23 @@
 
 @media screen and (max-width: 1279px) {
   .section {
-    padding: 0 33px;
+    
 
     &__heading {
-      margin-top: 100px;
+      margin: 120px 0 30px 33px;
     }
   }
 }
 
 @media screen and (max-width: 425px) {
   .section {
-    padding: 0 20px;
+    
     
     &__heading {
-      margin-top: 50px;
+      font-size: 36px;
+      text-align: center;
+      max-width: 200px;
+      margin: 90px auto 15px;
     }
   }
 }
