--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -72,3 +72,12 @@
     }
   }
 }
+
+@media screen and (max-width: 425px) {
+  .gallery {
+
+    &__photo {
+      margin-bottom: 80px;
+    }
+  }
+}
