--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 
 @import "utils";
 @import "typography";
+@import "./menu";
 @import "info";
 
 @import "./header";
@@ -11,6 +12,7 @@
 @import "./lecture";
 @import "./gallery";
 @import "./subscriptiop";
+@import "./footer";
 
 html {
   font-family: "IBM Plex Sans", sans-serif;
