--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -15,6 +15,15 @@
     margin-bottom: 200px;
   }
 
+  &__img {
+    transition: transform 400ms ease-in-out;
+
+    &:hover {
+      transform: translate(-10px, 20px);
+      box-shadow: 0 10px 30px 5px rgb(37, 24, 24);
+    }
+  }
+
   &__img--position-top-left {
     grid-area: top-left;
   }
@@ -42,7 +51,7 @@
 
 @media (min-width: $desktop-width-l) {
   .gallery {
-    padding: 200px 175px 0;
+    padding-top: 200px;
     max-width: 1900px;
   }
 }
