--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,11 @@
 .header {
-  display: grid;
-  grid-template-columns: 675px 3fr;
 
-  text-transform: uppercase;
+  &__section {
+    display: grid;
+    grid-template-columns: 675px 3fr;
+
+    text-transform: uppercase;
+  }
 
   &__left {
     position: relative;
@@ -67,6 +70,12 @@
     font-weight: 500;
     font-size: 16px;
     color: #0f0e08;
+    
+    transition: transform 500ms ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__link-text {
@@ -102,7 +111,10 @@
 
 @media (max-width: $notebook-width-m) {
   .header {
-    grid-template-columns: 300px 1fr;
+
+    &__section {
+      grid-template-columns: 300px 1fr;
+    }
 
     &__title {
       top: 30%;
@@ -127,8 +139,11 @@
 
 @media (max-width: $phone-width-l) {
   .header {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+
+    &__section {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
 
     &__left {
       padding: 0;
