--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   gap: $grid-gap;
 
+  @media screen and (max-width: 768px) {
+    gap: $grid-gap / 2;
+  }
+
   &__first {
     height: 600px;
     margin-bottom: $grid-gap;
@@ -75,8 +79,8 @@
     }
 
     @media screen and (max-width: 320px) {
-      width: 280px;
       height: 410px;
+      object-fit: cover;
     }
   }
 
