gallery, footer section

--- a/src/styles/footer/media.scss
+++ b/src/styles/footer/media.scss
@@ -25,7 +25,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    margin-right: 55px;
+    margin-right: 20%;
 
     &__logo {
       margin-bottom: 62px;
