--- a/src/styles/footer/nav.scss
+++ b/src/styles/footer/nav.scss
@@ -22,11 +22,23 @@
 
 @media screen and (min-width: 450px) {
   .nav {
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
     width: 480px;
     justify-content: start;
 
     &__list {
       margin-right: 90px;
     }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    border: none;
   }
 }
