--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -9,7 +9,8 @@
 
   &__img {
     float: right;
-    object-fit: fill;
+    height: 100%;
+    object-fit: cover;
     object-position: center;
   }
 
@@ -26,7 +27,7 @@
   &__toggler-label {
     position: absolute;
     top: 33px;
-    left: 23px;
+    left: 5%;
 
     & > span,
     &::before,
@@ -50,6 +51,25 @@
     &__img {
       width: 505px;
       height: 100%;
+    }
+
+    &__logo {
+      top: 15px;
+      font-size: 36px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    height: 625px;
+
+    &__img {
+      width: 725px;
+    }
+
+    &__toggler-label {
+      top: 45px;
     }
   }
 }
