--- a/src/styles/main/art-museum.scss
+++ b/src/styles/main/art-museum.scss
@@ -53,12 +53,17 @@
   .art-museum {
     position: absolute;
     top: 135px;
-    left: 34px;
+    left: 5%;
     text-align: start;
 
     &__title {
       width: 360px;
       font-size: 55px;
+    }
+
+    &__transparant-title {
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke: 1px #000;
     }
 
     &__btn {
@@ -69,6 +74,18 @@
         width: 70px;
         height: 70px;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .art-museum {
+    top: 235px;
+    left: 255px;
+
+    &__title {
+      width: 462px;
+      font-size: 72px;
     }
   }
 }
