--- a/src/styles/main/current-events.scss
+++ b/src/styles/main/current-events.scss
@@ -2,7 +2,7 @@
 
 // Iphone SE
 .current-events {
-  padding: 0 20px;
+  padding: 0 5%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -21,5 +21,12 @@
   .current-events {
     padding-top: 90px;
     text-align: start;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .current-events {
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 }
