--- a/src/styles/main/gallery.scss
+++ b/src/styles/main/gallery.scss
@@ -1,3 +1,42 @@
 .gallery {
   display: none;
+  padding: 0 5% 200px;
+
+  &__title {
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 60px;
+  }
+
+  &__container {
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    width: 1150px;
+  }
+
+  &__img {
+    object-fit: cover;
+    object-position: center;
+
+    &--first {
+      width: 370px;
+      margin: 0 10px 10px 0;
+    }
+
+    &--second {
+      width: 770px;
+      margin-bottom: 10px;
+    }
+
+    &--third {
+      margin-right: 10px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .gallery {
+    display: block;
+  }
 }
