--- a/src/styles/main/subscribe.scss
+++ b/src/styles/main/subscribe.scss
@@ -27,6 +27,12 @@
 //IPad Mini/9.7
 @media screen and (min-width: 768px) {
   .subscribe {
-    height: 380px;
+    padding: 64px 149px 94px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .subscribe {
+    padding: 10% 335px 15%;
   }
 }
