--- a/src/styles/main/article.scss
+++ b/src/styles/main/article.scss
@@ -54,7 +54,7 @@
     text-align: center;
     &__img {
       margin-bottom: 30px;
-      max-width: 700px;
+      // max-width: 700px;
       height: 520px;
     }
 
@@ -68,6 +68,21 @@
 
     &__text {
       margin-bottom: 50px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .article {
+    &__img {
+      height: 520px;
+      width: 670px;
+      float: left;
+      margin-right: 130px;
+    }
+
+    &__exhibition {
+      margin-top: 150px;
     }
   }
 }
