--- a/src/styles/main/romantism.scss
+++ b/src/styles/main/romantism.scss
@@ -2,7 +2,7 @@
 
 .romantism {
   position: relative;
-  padding-bottom: 197px;
+  padding-bottom: 195px;
 
   &__img {
     height: 210px;
@@ -17,11 +17,21 @@
   .romantism {
     display: flex;
     justify-content: center;
+    padding: 0 5% 195px;
 
     &__img {
       height: 400px;
-      width: 700px;
+      width: 100%;
       margin: 0 auto;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .romantism {
+    &__img {
+      width: 100%;
+      height: 674px;
     }
   }
 }
