all mistakes were fixed

--- a/src/styles/footer/footerBottom.scss
+++ b/src/styles/footer/footerBottom.scss
@@ -1,7 +1,6 @@
 .footer-bottom {
-  padding: 0 120px 35px;
+  padding: 50px 120px 35px;
   position: relative;
-  
 
   @media (min-width:320px) {
     display: flex;
@@ -10,8 +9,7 @@
   }
 
   @media (min-width:768px) {
-    // padding: 0 120px 35px;
-    max-width: 460px;
+    max-width: 660px;
   }
 
   @media (min-width:1280px) {
@@ -33,6 +31,25 @@
   }
 }
 
+.date {
+  padding: 100px 0 40px;
+  color: #0f0e08;
+  font-weight: 300;
+  font-family: $plexSansFontFamily;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  text-align: center;
+
+  @media (min-width:768px) {
+    flex-direction: row;
+  }
+
+  &__copyright {
+    padding-top: 14px;
+  }
+}
+
 .left-side {
   display: flex;
   justify-content: space-between;
@@ -43,13 +60,12 @@
   }
 
   @media (min-width:768px) {
-    margin-bottom: 100px;
-    flex-direction: row;
+    padding: 0 100px;
   }
 
   @media (min-width:1280px) {
     margin: 0;
-    flex-direction: row;
+    padding: 0;
   }
 
   
@@ -72,11 +88,12 @@
   @media (min-width:768px) {
     position: absolute;
     left: 0;
+    top: 120px;
     right: 90%;
     flex-direction: column;
   }
 
-  @media (min-width:1279px) {
+  @media (min-width:1280px) {
     position: static;
   }
 
@@ -85,9 +102,16 @@
   }
 
   &__network {
-    // margin-top: 62px;
     display: flex;
     justify-content: space-between;
+
+    @media (min-width:768px) {
+      margin-top: 40px;
+    }
+
+    @media (min-width:1280px) {
+      margin-bottom: 100px;
+    }
   }
 
 }
@@ -114,6 +138,11 @@
   display: flex;
   justify-content: space-between;
   position: relative;
+  
+
+  @media (min-width: 768px) {
+    padding: 0 100px;
+  }
 
   @media (max-width:1279px) {
     
@@ -125,6 +154,11 @@
       content: "";
       height: 1px;
       background-color: rgba(26, 90, 76, 0.5);
+
+      @media (min-width: 768px) {
+        width: 460px;
+        left: 100px;
+      }
     }
   }
 
