--- a/src/styles/footer/footerTop.scss
+++ b/src/styles/footer/footerTop.scss
@@ -1,26 +1,46 @@
 .footer-top {
-  background-image: url("../images/secondary_background.png");
-  height: 550px;
+  background-image: url("../images/writers.png");
+  margin-bottom: 50px;
+  height: 380px;
+  width: 100vw;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
   position: relative;
 
+  
+
+  @media (min-width:570px) {
+    background-position: center center;
+  }
+
+  @media (min-width:1024px) {
+    height: 550px;
+    background-position: center center;
+  }
+
+  @media (min-width:1800px) {
+    height: 650px;
+    background-position: center center;
+  }
+
   &__subscribe {
     position: absolute;
-    left: calc(50% - (570px / 2));
-    top: 140px;
-
-    @media (min-width:320px) {
-      left: calc(50% - (280px / 2));
-    }
+    left: calc(50% - (280px / 2));
+    top: 55px;
 
     @media (min-width:768px) {
       left: calc(50% - (480px / 2));
+      top: 65px;
     }
 
-    @media (min-width:1280px) {
+    @media (min-width:1024px) {
       left: calc(50% - (570px / 2));
+      top: 140px;
+    }
+
+    @media (min-width:1920px) {
+      top: 175px;
     }
   }
 }
@@ -56,11 +76,7 @@
   }
 
   &__header {
-    // text-align: center;
-    
     color: #fff;
-
-    
   }
 
   &__text {
