--- a/src/styles/galery/galeryTop.scss
+++ b/src/styles/galery/galeryTop.scss
@@ -1,24 +1,48 @@
 .lection {
-  background-image: url("../images/dusk.png");
-  height: 550px;
+  background-image: url("../images/nature.png");
+  width: 100vw;
+  height: 210px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center bottom;
+  background-position: center center;
   position: relative;
-  margin-bottom: 200px;
+  margin-bottom: 70px;
+
+  @media (min-width:425px) {
+    height: 390px;
+  }
+
+  @media (min-width:768px) {
+    margin-bottom: 90px;
+    height: 550px;
+  }
+
+  @media (min-width:1024px) {
+    margin-bottom: 100px;
+    height: 550px;
+  }
+
+  @media (min-width:1440px) {
+    height: 550px;
+  }
+
+  @media (min-width:1800px) {
+    height: 674px;
+  }
 
   &__nature {
     position: absolute;
 
     @media (min-width:320px) {
       left: calc(50% - (280px / 2));
-      bottom: -70px;
+      bottom: -100px;
     }
   
     @media (min-width:768px) {
       left: calc(50% - (570px / 2));
       bottom: -102px;
     }
+
   }
 }
 
