--- a/src/styles/mainContent/events.scss
+++ b/src/styles/mainContent/events.scss
@@ -2,6 +2,17 @@
 
   &__header {
     margin-bottom: 60px;
+    line-height: 100%;
+    text-align: center;
+    font-size: 36px;
+
+    @media (min-width: 768px) {
+      font-size: 48px;
+    }
+
+    @media (min-width: 1024px) {
+      text-align: left;
+    }
   }
 }
 
@@ -45,6 +56,11 @@
     font-weight: 300;
     line-height: 24px;
     text-align: left;
+    width: 370px;
+
+    @media (max-width:425px) {
+      width: 100%;
+    }
   }
 }
 
@@ -109,8 +125,6 @@
   }
 
   .cell-fit {
-    // height: 210px;
-    // width: 100%;
     object-fit: cover;
 
     @media (max-width:1799px) {
