--- a/src/styles/galery/galeryBottom.scss
+++ b/src/styles/galery/galeryBottom.scss
@@ -1,10 +1,51 @@
+.galery {
+  &__header {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 40px;
+
+    @media(min-width:768px) {
+      font-size: 48px;
+      margin-bottom: 50px;
+    }
+
+    @media(min-width:1024px) {
+      margin-bottom: 60px;
+      text-align: left;
+    }
+  }
+}
+
+.pages-toggler {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+
+  &__page {
+    margin: 0 11px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: #e0e0e0;
+  }
+
+  @media(min-width:1024px) {
+    display: none;
+  }
+}
+
+.page {
+  &--has-choosed {
+    background: #1a5a4C;
+  }
+}
+
 .album {
-  margin: 60px 0;
+  // margin: 60px 0;
   grid-template-columns: repeat(12, 1fr);
 
   @media(min-width:320px) {
     width: 100%;
-    
   }
 
   @media(min-width:768px) {
@@ -24,7 +65,7 @@
       object-fit: cover;
     }
 
-    @media (max-width:768px) {
+    @media (max-width:767px) {
       &--1 {
         position: relative;
 
