--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -26,12 +26,14 @@
     display: flex;
     align-items: flex-end;
     flex-direction: column;
+    text-align: center;
 
     @media (max-width: 570px) {
-      align-items: flex-start;
+      align-items: center;
       padding: 0 20px;
     }
   }
+
 
   &__main-title {
     align-items: right;
@@ -54,6 +56,7 @@
     @media (max-width: 570px) {
       font-size: 40px;
       line-height: 40px;
+      margin-top: 20px;
     }
   }
 
@@ -88,18 +91,24 @@
     }
 
     @media (max-width: 570px) {
-      width: 100%;
+      width: 100vw;
+      height: 300px;
     }
   }
 
   &__ticket {
     height: 70px;
+    margin-top: 80px;
     margin-right: 77px;
 
     @media (max-width: 768px) {
       margin-right: 10px;
     }
 
+    @media (max-width: 425px) {
+      margin-right: 0;
+      margin-top: 20px;
+    }
   }
 
   @media (min-width: 1280px) {
@@ -269,7 +278,6 @@
 }
 
 .ticket {
-  margin-top: 80px;
   height: 70px;
   display: flex;
   border: 1px solid;
