--- a/src/styles/header/page.scss
+++ b/src/styles/header/page.scss
@@ -1,24 +1,33 @@
 .container {
 
-  margin: 100px 20px;
+  margin: 0 20px;
 
   @media (min-width: 320px) {
     min-width: 280px;
   }
 
   @media (min-width:768px) {
-    padding: 0 55px;
-    max-width: 870px;
-    margin: 100px auto;
+    width: 700px;
+    margin: 0 auto;
   }
 
   @media (min-width:1280px) {
-    margin: 100px auto;
-    padding: 0;
     min-width: 1170px;
   }
 
   @media (min-width:1800px) {
     min-width: 1570px;
+  }
+}
+
+.inner-padding {
+  padding: 70px 0;
+
+  @media (min-width:768px) {
+    padding: 90px 0;
+  }
+
+  @media (min-width:1280px) {
+    padding: 100px 0;
   }
 }
