--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -16,13 +16,13 @@
   }
 }
 
-@media (max-width: $tablet-width-s) {
+@media (max-width: calc(#{$tablet-width} - 100px)) {
   .contacts {
     width: 130px;
   }
 }
 
-@media (max-width: $phone-width-m) {
+@media (max-width: calc(#{$phone-width} - 50px)) {
   .contacts {
     width: 128px;
   }
