--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -90,7 +90,7 @@
   }
 }
 
-@media (min-width: $desktop-width-m) {
+@media (min-width: calc(#{$desktop-width} + 100px)) {
   .events {
   
     &__info {
@@ -115,7 +115,7 @@
   }
 }
 
-@media (max-width: $desktop-width-small-m) {
+@media (max-width: $desktop-width) {
   .events {
     padding: 200px 55px 100px;
 
@@ -125,7 +125,7 @@
   }
 }
 
-@media (max-width: $notebook-width-m) {
+@media (max-width: $notebook-width) {
   .events {
     grid-template-areas: "title"
       "img"
@@ -150,7 +150,7 @@
   }
 }
 
-@media (max-width: $phone-width-l) {
+@media (max-width: $phone-width) {
   .events {
     padding: 0 5px;
 
