--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -18,8 +18,6 @@
     background: rgba(26, 90, 76, 0.5);
   }
 
-  
-
   &__section {
     display: grid;
     grid-template-areas: "connection connection connection menu menu"
@@ -28,6 +26,10 @@
     padding: 55px 55px 35px;
     grid-gap: 84px 0;
     align-content: center;
+    
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
   }
 
   &__connection-container {
@@ -52,13 +54,13 @@
   }
 }
 
-@media (min-width: $desktop-width-m) {
+@media (min-width: calc(#{$desktop-width} + 100px)) {
   .footer__menu {
     margin-right: 150px;
   }
 }
 
-@media (max-width: $desktop-width-m) {
+@media (max-width: calc(#{$desktop-width} + 100px)) {
   .footer {
     &::after {
       left: 58%;
@@ -66,7 +68,7 @@
   }
 }
 
-@media (max-width: $desktop-width-s) {
+@media (max-width: calc(#{$desktop-width} - 100px)) {
   .footer {
     &::after {
       left: 58%;
@@ -74,7 +76,7 @@
   }
 }
 
-@media (max-width: $notebook-width-l) {
+@media (max-width: calc(#{$notebook-width} + 100px)) {
   .footer {
     &::after {
       left: 58%;
@@ -82,7 +84,7 @@
   }
 }
 
-@media (max-width: $notebook-width-m) {
+@media (max-width: $notebook-width) {
   .footer {
 
     &::after {
@@ -114,7 +116,7 @@
   }
 }
 
-@media (max-width: $notebook-width-s) {
+@media (max-width: calc(#{$notebook-width} - 100px)) {
   .footer {
 
     &::after {
@@ -123,7 +125,7 @@
   }
 }
 
-@media (max-width: $tablet-width-l) {
+@media (max-width: calc(#{$tablet-width} + 100px)) {
   .footer {
 
     &::after {
@@ -132,7 +134,7 @@
   }
 }
 
-@media (max-width: $tablet-width-m) {
+@media (max-width: $tablet-width) {
   .footer {
 
     &::after {
@@ -141,7 +143,7 @@
   }
 }
 
-@media (max-width: $tablet-width-s) {
+@media (max-width: calc(#{$tablet-width} - 100px)) {
   .footer {
     padding: 50px 20px;
 
@@ -197,7 +199,7 @@
   }
 }
 
-@media (max-width: $phone-width-m) {
+@media (max-width: calc(#{$phone-width} - 50px)) {
   .footer {
     
     &::after {
@@ -213,7 +215,7 @@
   }
 }
 
-@media (max-width: $phone-width-s) {
+@media (max-width: calc(#{$phone-width} - 170px)) {
   .footer {
     &::after {
       top: 48%;
