--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -29,7 +29,7 @@
   }
 }
 
-@media (max-width: $tablet-width-s) {
+@media (max-width: calc(#{$tablet-width} - 100px)) {
   .form {
     justify-content: center;
 
