--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -16,7 +16,7 @@
   }
 }
 
-@media (max-width: $tablet-width-s) {
+@media (max-width: calc(#{$tablet-width} - 100px)) {
   .nav__list {
     grid-gap: 20px 60px;
   }
