--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -29,13 +29,13 @@
   }
 }
 
-@media (max-width: $notebook-width-m) {
+@media (max-width: $notebook-width) {
   .subscription {
     height: 380px;
   }
 }
 
-@media (max-width: $tablet-width-s) {
+@media (max-width: calc(#{$tablet-width} - 100px)) {
   .subscription__title {
     font-size: 36px;
   }
