--- a/src/styles/description.scss
+++ b/src/styles/description.scss
@@ -44,31 +44,31 @@
   }
 }
 
-@media (min-width: $desktop-width-l) {
+@media (min-width: calc(#{$desktop-width} + 500px)) {
   .description__info {
     margin-bottom: -100px;
   }
 }
 
-@media (min-width: $desktop-width-small-l) {
+@media (min-width: calc(#{$desktop-width} + 300px)) {
   .description__info {
     margin-bottom: -80px;
   }
 }
 
-@media (min-width: $desktop-width-m) {
+@media (min-width: calc(#{$desktop-width} + 100px)) {
   .description__info {
     margin-bottom: -60px;
   }
 }
 
-@media (min-width: $desktop-width-medium-s) {
+@media (min-width: calc(#{$desktop-width} - 50px)) {
   .description__info {
     margin-bottom: -140px;
   }
 }
 
-@media (max-width: $notebook-width-m) {
+@media (max-width: $notebook-width) {
   .description {
     background-size: 90% 50%;
     background-position: center center;
@@ -79,7 +79,7 @@
   }
 }
 
-@media (max-width: $tablet-width-medium-m) {
+@media (max-width: calc(#{$tablet-width} - 50px)) {
   .description {
     background-size: contain;
     
@@ -105,7 +105,7 @@
   }
 }
 
-@media (max-width: $phone-width-l) {
+@media (max-width: $phone-width) {
   .description {
     align-items: center;
 
