--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -49,14 +49,14 @@
   }
 }
 
-@media (min-width: $desktop-width-l) {
+@media (min-width: calc(#{$desktop-width} + 500px)) {
   .gallery {
     padding-top: 200px;
     max-width: 1900px;
   }
 }
 
-@media (max-width: $desktop-width-l) {
+@media (max-width: calc(#{$desktop-width} + 500px)) {
   .gallery {
     padding: 200px 10px 0;
     
@@ -75,7 +75,7 @@
   }
 }
 
-@media (max-width: $notebook-width-l) {
+@media (max-width: calc(#{$notebook-width} + 100px)) {
   .gallery {
     padding: 0 0 0 10px;
 
@@ -113,7 +113,7 @@
   }
 }
 
-@media (max-width: $tablet-width-small-m) {
+@media (max-width: calc(#{$tablet-width} - 80px)) {
   .gallery {
 
     &__title {
