--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,6 +3,9 @@
   &__section {
     display: grid;
     grid-template-columns: 675px 3fr;
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
 
     text-transform: uppercase;
   }
@@ -109,9 +112,8 @@
   }
 }
 
-@media (max-width: $notebook-width-m) {
+@media (max-width: $notebook-width) {
   .header {
-
     &__section {
       grid-template-columns: 300px 1fr;
     }
@@ -137,7 +139,7 @@
   }
 }
 
-@media (max-width: $phone-width-l) {
+@media (max-width: $phone-width) {
   .header {
 
     &__section {
