--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,24 +1,7 @@
-@import "reset";
-@import "utils";
-@import "header";
-@import "events";
-@import "description";
-@import "gallery";
-@import "subscription";
-@import "form";
-@import "footer";
-@import "links";
-@import "shedule";
-@import "contacts";
-@import "nav";
-@import "section";
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: "IBM Plex Sans", "Montserrat", "Ubuntu", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
+.main {
+  &__section {
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+  }
 }
