made more comfortable

--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -38,6 +38,8 @@
   }
 
   &__title {
+    display: flex;
+    flex-wrap: nowrap;
     position: relative;
     margin-bottom: 15px;
 
@@ -47,15 +49,34 @@
     line-height: 36px;
     color: $header-text-color;
 
-    &::after {
-      position: absolute;
-      bottom: 25%;
-      right: 30px;
+    &--top {
 
-      content: "";
-      width: 15px;
-      height: 15px;
-      background-color: #f14a27;
+      &::after {
+        position: absolute;
+        bottom: 25%;
+        right: 0;
+
+        content: "";
+        width: 15px;
+        height: 15px;
+        background-color: #f14a27;
+  
+      }
+    }
+
+    &--bottom {
+
+      &::after {
+        position: absolute;
+        bottom: 25%;
+        right: 0;
+
+        content: "";
+        width: 15px;
+        height: 15px;
+        background-color: #f14a27;
+  
+      }
     }
   }
 
@@ -65,7 +86,7 @@
     color: #4e4e4e;
   }
 }
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
   .event {
 
     &__img {
