--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -67,7 +67,7 @@
   }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
   .footer {
 
     &__info {
@@ -82,7 +82,7 @@
       &::after {
         transform: rotate(90deg);
         left: -50%;
-        top: 50%;
+        top: 40%;
         height: 460px;
       }
     }
@@ -117,7 +117,7 @@
       &::after {
         transform: rotate(90deg);
         left: -10%;
-        top: 70%;
+        top: 60%;
         height: 80vw;
       }
       
@@ -127,6 +127,28 @@
       display: flex;
       text-align: center;
       flex-direction: column-reverse;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .footer {
+    &__contacts {
+      grid-area: contacts;
+
+      &::after {
+        top: 70%;
+      }
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .footer {
+    &__contacts {
+      &::after {
+        top: 80%;
+      }
     }
   }
 }
