--- a/src/styles/lection.scss
+++ b/src/styles/lection.scss
@@ -21,6 +21,12 @@
     padding: 0 100px;
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
+
+    transition: transform 1s;
+
+    &:hover {
+      transform: translate(0, -10px);
+    }
   }
 
   &__caption {
