--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,3 +1,14 @@
+.gallery {
+  &__img {
+
+    transition: transform 1s, border-radius 1s;
+    &:hover {
+      transform: scale(1.1);
+      border-radius: 10px;
+    }
+  }
+}
+
 @media (min-width: 1440px) {
   .gallery {
     display: grid;
